--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="https://prosym.org/64/">第64回プログラミング・シンポジウム</a>, 2023/1/6.
       </li>
     </ul>
-    <h3>Poster (domestic conference, in Japan)</h3>
+    <h3>Poster on domestic conference (in Japan)</h3>
     <ul>
       <li>
         藤浪大弥, 和賀正樹, 蓮尾一郎, 石川裕,<br>
