--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>
       <small>E-Mail: <code>makenowjust at nii.ac.jp</code></small>
     </p>
-    <h3>Talk on domestic conference (in Japan)</h3>
+    <h3>Talks at domestic conferences in Japan</h3>
     <ul>
       <li>
         藤浪大弥,<br>
@@ -42,7 +42,7 @@
         <a href="https://prosym.org/64/">第64回プログラミング・シンポジウム</a>, 2023/1/6.
       </li>
     </ul>
-    <h3>Poster on domestic conference (in Japan)</h3>
+    <h3>Posters at domestic conferences in Japan</h3>
     <ul>
       <li>
         藤浪大弥, 和賀正樹, 蓮尾一郎, 石川裕,<br>
@@ -50,16 +50,16 @@
         <a href="https://jssst-ppl.org/workshop/2023/">第25回プログラミングおよびプログラミング言語ワークショップ(PPL 2023)</a>, 2023/3/6-8.
       </li>
     </ul>
-    <h3>Contribution to Magazine</h3>
+    <h3>Contributions to Magazine</h3>
     <ul>
       <li>
         藤浪大弥,<br>
         <strong>Perl Hackers Hub 第 74 回 正規表現の脆弱性「ReDoS」徹底解説 ~原理と対策か ら、Perl での最適化まで</strong> 
         (<a href="https://gihyo.jp/dev/serial/01/perl-hackers-hub/007401">パート1</a>, <a href="https://gihyo.jp/dev/serial/01/perl-hackers-hub/007402">パート2</a>),<br>
-        <a href="https://gihyo.jp/magazine/wdpress/archive/2022/vol130">WEB+DB PRESS Vol.130</a>, 2022/08/24.
+        <a href="https://gihyo.jp/magazine/wdpress/archive/2022/vol130">WEB+DB PRESS Vol.130</a>, 技術評論社, 2022/08/24.
       </li>
     </ul>
-    <h3>Talk on tech conference</h3>
+    <h3>Talks at tech conferences</h3>
     <ul>
       <li>
         藤浪大弥,<br>
@@ -72,7 +72,7 @@
         <a href="https://rubykaigi.org/2023/">RubyKaigi 2021</a>, 2023/5/11.
       </li>
     </ul>
-    <h3>Other Contribution</h3>
+    <h3>Other Contributions</h3>
     <ul>
       <li>
         <a href="https://www.ipa.go.jp/archive/jinzai/security-camp/2020/zenkoku/info.html">セキュリティ・キャンプ全国大会2020オンライン</a>『ReDoSの検出プログラムの作成とOSSへの適用』に講師として参加 ※新屋良磨氏 (秋田大学) と共同で担当
