--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <p>
       <small>E-Mail: <code>makenowjust at nii.ac.jp</code></small>
     </p>
+    <h3>Awards</h3>
+    <ul>
+      <li>
+        『ハイブリッド型ReDoS検出プログラムの実装』
+        <strong>第37回山内奨励賞 受賞</strong>
+      </li>
+      <li>
+        <strong>Ruby Prize 2023 Final Nominee</strong>
+      </li>
+    </ul>
     <h3>Talks at domestic conferences in Japan</h3>
     <ul>
       <li>
