--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
       My research interest is formal language, regular expressions, and security (e.g. ReDoS).
     </p>
     <p>
+      I am also a <a href="https://github.com/ruby/ruby">Ruby</a> committer. I maintain Ruby's regex engine (Onigmo).
+    </p>
+    <p>
       <small>E-Mail: <code>makenowjust at nii.ac.jp</code></small>
     </p>
     <h3>Awards</h3>
     <ul>
       <li>
-        『ハイブリッド型ReDoS検出プログラムの実装』
-        <strong>第37回山内奨励賞 受賞</strong>
+        <strong>第37回山内奨励賞 受賞</strong><br>
+        <a href="https://prosym.org/awards/">https://prosym.org/awards/</a>
       </li>
       <li>
-        <strong>Ruby Prize 2023 Final Nominee</strong>
+        <strong>Ruby Prize 2023 Final Nominee</strong><br>
+        <a href="https://rubyprize.jp">https://rubyprize.jp</a>
       </li>
     </ul>
     <h3>Talks at domestic conferences in Japan</h3>
