--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         <a href="https://prosym.org/64/">第64回プログラミング・シンポジウム</a>, 2023/1/6.
       </li>
     </ul>
+    <h3>Talks at international conferences</h3>
+    <ul>
+      <li>
+        Hiroya Fujinami, Ichiro Hasuo,<br>
+        <strong>"Efficient Matching with Memoization for Regexes with Look-around and Atomic Grouping"</strong>,<br>
+        <a href="https://etaps.org/2024/conferences/esop/">33rd European Symposium on Programming (ESOP 2024)</a>, 2024/4/10
+      </li>
+    </ul>
     <h3>Posters at domestic conferences in Japan</h3>
     <ul>
       <li>
